--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="h-full overflow-hidden">
+  <body class="h-full sm:overflow-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
